--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,13 +5,13 @@ repo: upptime # Your GitHub repository name
 # Add your sites here
 sites:
   - name: cloud01
-    url: https://cloud01.infotechdesign.ws
+    url: http://cloud01.infotechdesign.ws
   - name: cloud02
     url: http://cloud02.infotechdesign.ws:8090
   - name: cloud03
     url: http://vpn.blueridgecs.com/
   - name: cloud04
-    url: https://cloud04.infotechdesign.ws
+    url: http://cloud04.infotechdesign.ws
   - name: cloud05
     url: https://cloud05.infotechdesign.ws
   - name: cloud06
