--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ sites:
     url: https://cloud06.infotechdesign.ws
   - name: GWC
     url: https://genwealthconcepts.com
-  - name: The Money Multiplier
+  - name: TMM
     url: https://themoneymultiplier.com
 #  - name: Google
 #    url: https://www.google.com
