--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -41,8 +41,9 @@ status-website:
  # cname: demo.upptime.js.org
   # Uncomment the following line if you don't have a custom domain and add your repo name
   baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  logoUrl: https://infotechdesign.org/wp-content/uploads/2020/10/itd_s5_logo-334x64-1.png
+#  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  name: InfoTechDesign LLC Uptime
   introTitle: "**InfoTechDesign LLC Service Status**"
   introMessage: Following are service status and other important information
   navbar:
