--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,8 @@ sites:
   - name: cloud06
     url: https://cloud06.infotechdesign.ws
   - name: GWC
-    url: https://genwealthconcepts.com
+    url: $SECRET_SITE1
+#    url: https://genwealthconcepts.com
   - name: TMM
     url: https://themoneymultiplier.com
 #  - name: Google
