--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -55,3 +55,17 @@ status-website:
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
+
+env:
+#  NOTIFICATION_SLACK: ${{ secrets.NOTIFICATION_SLACK }} 
+#  NOTIFICATION_SLACK_WEBHOOK: ${{ secrets.NOTIFICATION_SLACK_WEBHOOK }} 
+#  NOTIFICATION_SLACK_WEBHOOK_URL: ${{ secrets.NOTIFICATION_SLACK_WEBHOOK_URL }}
+  NOTIFICATION_EMAIL: ${{ secrets.NOTIFICATION_EMAIL }}
+  NOTIFICATION_EMAIL_FROM: ${{ secrets.NOTIFICATION_EMAIL_FROM }}
+  NOTIFICATION_EMAIL_SENDGRID: ${{ secrets.NOTIFICATION_EMAIL_SENDGRID }}
+  NOTIFICATION_EMAIL_SENDGRID_API_KEY: ${{ NOTIFICATION_EMAIL_SENDGRID_API_KEY }}
+  NOTIFICATION_EMAIL_TO: ${{ NOTIFICATION_EMAIL_TO }}
+
+
+
+
